--- a/extensions/positron-python/src/datascience-ui/history-react/mainPanel.css
+++ b/extensions/positron-python/src/datascience-ui/history-react/mainPanel.css
@@ -1,3 +1,12 @@
 .top-spacing {
     margin-top : 24px;
 }
+
+.cell-table {
+    display: table;
+    width: 100%;
+}
+
+.cell-table-body {
+    display: table-row-group;
+}
